# DokeBrowser

./: .gitignore  CMakeLists.txt  DEVELOPMENT.md  HANDOVER.md  README.md
assets/: DKIcon.icns
docs/: CHROMIUM_PATCH_PLAN.md  CHROMIUM_SOURCE.md  DETECTION_BASELINE.md  DETECTION_SITES.json  DOKE_PROBE.md
patches/chromium/: 0001-doke-probe-contract.patch  0002-doke-runtime-config-load.patch  0003-doke-runtime-ua-lang-switches.patch  0004-doke-runtime-ua-client-hints-ingress.patch  0005-doke-runtime-ua-client-hints-override.patch  0006-doke-runtime-webrtc-policy.patch  0007-doke-runtime-screen-device-switches.patch  0008-doke-runtime-hardware-switches.patch  0009-doke-blink-hardware-overrides.patch  0010-doke-runtime-rendering-noise-ingress.patch  0011-doke-runtime-surface-preset-ingress.patch  0012-doke-runtime-alignment-ingress.patch  0013-doke-runtime-automation-ingress.patch  0014-doke-blink-webdriver-policy.patch  0015-doke-automation-controlled-policy.patch  0016-doke-cdp-side-effect-preview-guard.patch  README.md  series
src/: CMakeLists.txt
src/agent/: CMakeLists.txt  main.cpp
src/agent/core/: BrowserEngine.h  BrowserEngineFactory.cpp  BrowserEngineFactory.h  CdpClient.cpp  CdpClient.h  DokeChromiumEngine.cpp  DokeChromiumEngine.h  FingerprintMetadata.cpp  FingerprintMetadata.h  HttpProxyMapper.cpp  HttpProxyMapper.h  IpcServer.cpp  IpcServer.h  OpenVpnManager.cpp  OpenVpnManager.h  ProfileLaunchConfig.cpp  ProfileLaunchConfig.h  ProfileRuntimeManager.cpp  ProfileRuntimeManager.h  ProxyTestRunner.cpp  ProxyTestRunner.h  SystemChromeEngine.cpp  SystemChromeEngine.h
src/app/: CMakeLists.txt  main.cpp
src/app/core/: AppController.cpp  AppController.h  IpcClient.cpp  IpcClient.h  LogListModel.cpp  LogListModel.h  ProfileFilterModel.cpp  ProfileFilterModel.h  ProfileListModel.cpp  ProfileListModel.h  ProfileRepository.cpp  ProfileRepository.h  ProxyPoolModel.cpp  ProxyPoolModel.h
src/app/qml/: Main.qml  qml.qrc
src/app/win/: app.rc
src/shared/ipc/: FramedJsonSocket.cpp  FramedJsonSocket.h  IpcNames.h
src/tests/: CMakeLists.txt  engine_config_main.cpp  openvpn_manager_main.cpp  profile_launch_config_main.cpp  profile_runtime_manager_main.cpp  proxy_test_runner_main.cpp  smoke_main.cpp
tools/: apply_chromium_patches.sh  build_doke_chromium.sh  chromium_patch_queue_check.py  doke_alignment_patch_check.py  doke_automation_controlled_patch_check.py  doke_automation_patch_check.py  doke_cdp_capture.py  doke_cdp_side_effect_patch_check.py  doke_chromium_build_prereq.py  doke_chromium_fetch_status.py  doke_chromium_source_check.py  doke_detection_baseline.py  doke_hardware_patch_check.py  doke_patch_apply_smoke.py  doke_probe_check.py  doke_probe_patch_check.py  doke_rendering_patch_check.py  doke_runtime_check.py  doke_runtime_patch_check.py  doke_screen_patch_check.py  doke_surfaces_patch_check.py  doke_ua_ch_override_patch_check.py  doke_ua_ch_patch_check.py  doke_ua_patch_check.py  doke_webdriver_patch_check.py  doke_webrtc_patch_check.py  ensure_chromium_generated_versions.py  install_depot_tools.sh  ipc_cli.py  make_fake_doke.py  make_ico.py  prepare_doke_chromium_source.sh  proxy_auth_test.py  resume_doke_chromium_fetch.sh  select_chromium_xcode.sh
